<resources>
    <string name="app_name">MedOnTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MedOnTime</string>
    <string name="nav_header_subtitle">https://medontime.herokuapp.com/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_medicine">Medicine</string>
    <string name="menu_caretaker">Caretaker</string>
    <string name="menu_LogIn">Login</string>
    <string name="menu_ScanQR">ScanQR</string>
    <string name="menu_scan_NFC_tag">Scan NFC Tag</string>

    <string name="add_medicine">Add Medicine</string>
    <string name="unitTypePrompt">Unit Type</string>

    <string-array name="UnitTypeList">
        <item>g</item>
        <item>IU</item>
        <item>mcg</item>
        <item>mcg/hr</item>
        <item>mcg/ml</item>
        <item>mEg</item>
        <item>mg</item>
        <item>mg/cm2</item>
        <item>mg/g</item>
        <item>mg/ml</item>
        <item>mL</item>
        <item>%</item>
    </string-array>

    <string-array name="FrequencyList">
        <item>Every Day</item>
        <!--        <item>As needed</item>-->
        <item>Specific Days</item>
        <item>Days Interval</item>
        <item>Birth Control Cycle</item>
    </string-array>

    <string-array name="ShapeList">
        <item></item>
        <item>Circle</item>
        <item>Oval</item>
        <item>Triangle</item>
        <item>Heart</item>
        <item>Pentagon</item>
        <item>Hexagon</item>
        <item>Octagon</item>
        <item>Right Triangle</item>
        <item>Scalene Triangle</item>
        <item>Square</item>
        <item>Rectangle</item>
        <item>Parallelogram</item>
        <item>Trapezuim</item>
        <item>Rhombus</item>
        <item>4 Pointed Star</item>
        <item>5 Pointed Star</item>
        <item>6 Pointed Star</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_confirm">ConfirmActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>