<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fingertiptech.medontime.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="fingertiptech.medontime.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_medicine"
        android:name="fingertiptech.medontime.ui.medicine.MedicineFragment"
        android:label="@string/menu_medicine"
        tools:layout="@layout/fragment_medicine" />

    <fragment
        android:id="@+id/nav_caretaker"
        android:name="fingertiptech.medontime.ui.caretaker.CaretakerFragment"
        android:label="@string/menu_caretaker"
        tools:layout="@layout/fragment_caretaker" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="fingertiptech.medontime.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_scanQR"
        android:name="fingertiptech.medontime.ui.scanQRcode.ScanQRCodeFragment"
        android:label="@string/menu_scan_qr_code"
        tools:layout="@layout/fragment_scan_qr_code" />
    <fragment
        android:id="@+id/nav_scanNFC"
        android:name="fingertiptech.medontime.ui.scanNFCtag.ScanNFCTagFragment"
        android:label="@string/menu_scan_NFC_tag"
        tools:layout="@layout/scan_nfc_tag_fragment" />
</navigation>